--- a/css/search.css
+++ b/css/search.css
@@ -1,33 +1,59 @@
-.bg-color {
-    background-color: #f5f5f5;
+@font-face {
+    font-family: Roboto;
+    src: url(../vendor/font/Roboto-Regular.ttf);
 }
+
+html, body {
+    height: 100%;
+}
+
+body {
+    background-color: #f5f5f5;
+    font-family: 'Roboto', sans-serif;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: #FB427E
+}
+
 .nav-color {
     background-color: white;
 }
+
 .color-primary {
     background-color: #FB427E;
 }
-.btn-search{
+
+.btn-search {
     color: white;
 }
-.btn-download{
+
+.btn-download {
     color: white;
 }
+
 .btn-logout {
     background-color: transparent;
     border-color: #ccc;
 }
+
 .logo {
     max-width: 180px;
     min-width: 10px;
     height: auto;
 }
+
 .text-red {
     color: red;
 }
+
 .text-center {
-    text-align:center;
+    text-align: center;
 }
+
 .fix-right {
     float: right;
 }
